# edgar

./: .gitignore  LICENSE  README.md  pyproject.toml
edgar/: main.py
tests/: conftest.py  test_main.py
