[tool.poetry]
name = 'edgar'
version = '0.1.0'
description = 'Stores all SEC filings as PDF files for the requested ticker symbols and form.'
authors = ['Martin Sjöborg <martin@sjoborg.org>']
readme = 'README.md'
license = 'MIT'
package-mode = false
repository = 'https://github.com/python-poetry/poetry'

[tool.poetry.dependencies]
python = '^3.12'
httpx = '^0.27.0'
selenium = '^4.23.1'
argparse = "^1.4.0"

[tool.poetry.group.dev.dependencies]
ruff = '^0.5.7'
mypy = '^1.11.1'
pytest = "^8.3.2"
pytest-mock = "^3.14.0"

[build-system]
requires = ['poetry-core']
build-backend = 'poetry.core.masonry.api'

[tool.ruff]
target-version = 'py312'

[tool.ruff.format]
quote-style = 'single'